[gd_scene load_steps=13 format=3 uid="uid://bf3fe4o05ua20"]

[ext_resource type="Script" path="res://Components/WindowUI/Header/header.gd" id="1_a2eh7"]
[ext_resource type="FontFile" uid="uid://cmbf3fsdcpk2b" path="res://Fonts/Ac437_IBM_Model3x_Alt2.ttf" id="2_exemx"]
[ext_resource type="Texture2D" uid="uid://bacybyhcbo06n" path="res://SVGs/stop-svgrepo-com.svg" id="2_slb3a"]
[ext_resource type="Texture2D" uid="uid://b11bec5r63wnc" path="res://SVGs/clear-svgrepo-com.svg" id="3_iy88p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4umra"]
bg_color = Color(0, 0, 0, 0)
border_color = Color(4.81307e-07, 0.954906, 0.483495, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nty7"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0iiqy"]
font = ExtResource("2_exemx")
font_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6gsyv"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0)
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tu03y"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxs5j"]
bg_color = Color(1, 0.964706, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c47sh"]
bg_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_su1mv"]
bg_color = Color(0, 0.254902, 0.0823529, 1)

[node name="Header" type="PanelContainer"]
custom_minimum_size = Vector2(0, 30)
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_4umra")
script = ExtResource("1_a2eh7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LabelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0nty7")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LabelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="HBoxContainer/LabelContainer/MarginContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_0iiqy")

[node name="FocusContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6gsyv")

[node name="BtnContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tu03y")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/BtnContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/BtnContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MaxBtnContainer" type="PanelContainer" parent="HBoxContainer/BtnContainer/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/BtnContainer/MarginContainer/HBoxContainer/MaxBtnContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/BtnContainer/MarginContainer/HBoxContainer/MaxBtnContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wxs5j")

[node name="Button" type="Button" parent="HBoxContainer/BtnContainer/MarginContainer/HBoxContainer/MaxBtnContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_c47sh")
icon = ExtResource("2_slb3a")
icon_alignment = 1
expand_icon = true

[node name="CrossBtnContainer" type="PanelContainer" parent="HBoxContainer/BtnContainer/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/BtnContainer/MarginContainer/HBoxContainer/CrossBtnContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/BtnContainer/MarginContainer/HBoxContainer/CrossBtnContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wxs5j")

[node name="Button" type="Button" parent="HBoxContainer/BtnContainer/MarginContainer/HBoxContainer/CrossBtnContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_icons/icon = ExtResource("3_iy88p")
theme_override_styles/normal = SubResource("StyleBoxFlat_su1mv")
icon_alignment = 1
expand_icon = true
